# verno

./: .gitignore  Cargo.toml  README.md  derivation.nix  flake.nix  get_verus_std.sh  shell.nix  venir-toolchain.toml  venir_build.sh  verusStd.nix
compiler/formal_verification/: Cargo.toml
compiler/formal_verification/src/: ast.rs  convert_structs.rs  inline_globals.rs  lib.rs  parse.rs  type_conversion.rs  typing.rs
compiler/formal_verification/src/parse/: errors.rs  mod.rs
compiler/fv_bridge/: Cargo.toml
compiler/fv_bridge/src/: errors.rs  lib.rs  typed_attrs_to_vir.rs
docs/: book.toml
docs/src/: README.md  SUMMARY.md  additional_features.md  getting_started.md  limitations.md  specification_syntax.md  unconstrained_support.md
docs/src/specifications/: README.md  ghost_functions.md  pre_and_postconditions.md  quantifiers.md  recursion_and_loops.md
formal_verification/: Cargo.toml
formal_verification/src/: lib.rs  venir_communication.rs
formal_verification/src/annotations/: ast.rs  mod.rs
formal_verification/src/annotations/lowering/: convert_structs.rs  inline_globals.rs  mod.rs
formal_verification/src/annotations/parsing/: errors.rs  mod.rs
formal_verification/src/annotations/typing/: mod.rs  type_infer.rs
formal_verification/src/driver/: compilation_pipeline.rs  mod.rs  wrapper_errors.rs
formal_verification/src/vir_backend/: mod.rs
formal_verification/src/vir_backend/lowering/: array_mutation.rs  loop_unroll.rs  mod.rs  mut_args.rs  rename_functions.rs  tuple_deconstruction.rs
formal_verification/src/vir_backend/vir_gen/: attribute.rs  function.rs  globals.rs  mod.rs  typed_attrs_to_vir.rs
formal_verification/src/vir_backend/vir_gen/expr_to_vir/: builtins.rs  expr.rs  mod.rs  params.rs  std_functions.rs  types.rs
fv_std/: Nargo.toml
fv_std/src/: lib.nr
test_programs/formal_verify_failure/exec_function_in_attribute/: Nargo.toml
test_programs/formal_verify_failure/verus_assert_failure/: Nargo.toml
test_programs/formal_verify_failure/verus_expectations_failure/: Nargo.toml
test_programs/formal_verify_failure/verus_post_failure/: Nargo.toml
test_programs/formal_verify_failure/verus_requires_violation/: Nargo.toml
test_programs/formal_verify_file_mode/cross_file/: Nargo.toml
test_programs/formal_verify_file_mode/library_module/: Nargo.toml
test_programs/formal_verify_success/: tmp
test_programs/formal_verify_success/array_as_attribute/: Nargo.toml
test_programs/formal_verify_success/array_as_result_attr/: Nargo.toml
test_programs/formal_verify_success/array_as_result_attr_copy/: Nargo.toml
test_programs/formal_verify_success/array_as_result_attrs_copies/: Nargo.toml
test_programs/formal_verify_success/array_as_result_const/: Nargo.toml
test_programs/formal_verify_success/array_as_result_global/: Nargo.toml
test_programs/formal_verify_success/array_copy/: Nargo.toml
test_programs/formal_verify_success/array_param_index/: Nargo.toml
test_programs/formal_verify_success/array_set_1/: Nargo.toml
test_programs/formal_verify_success/array_set_complex_composite_type/: Nargo.toml
test_programs/formal_verify_success/array_set_composite_types_1/: Nargo.toml
test_programs/formal_verify_success/array_set_composite_types_3/: Nargo.toml
test_programs/formal_verify_success/binary_search_v1/: Nargo.toml
test_programs/formal_verify_success/binary_search_v2/: Nargo.toml
test_programs/formal_verify_success/bitshifts/: Nargo.toml
test_programs/formal_verify_success/boolean/: Nargo.toml
test_programs/formal_verify_success/builtin_mem_ops/: Nargo.toml
test_programs/formal_verify_success/builtin_runtime_hint/: Nargo.toml
test_programs/formal_verify_success/call_struct_method/: Nargo.toml
test_programs/formal_verify_success/cast/: Nargo.toml
test_programs/formal_verify_success/cast_from_to_field/: Nargo.toml
test_programs/formal_verify_success/comparison/: Nargo.toml
test_programs/formal_verify_success/eq_trait/: Nargo.toml
test_programs/formal_verify_success/eq_trait_1/: Nargo.toml
test_programs/formal_verify_success/exists_big_element_sum/: Nargo.toml
test_programs/formal_verify_success/exists_zero_in_array/: Nargo.toml
test_programs/formal_verify_success/field_arithmetic/: Nargo.toml
test_programs/formal_verify_success/field_minus_one_is_max/: Nargo.toml
test_programs/formal_verify_success/field_wrapped_overflow_1/: Nargo.toml
test_programs/formal_verify_success/field_wrapped_overflow_2/: Nargo.toml
test_programs/formal_verify_success/field_wrapped_overflow_3/: Nargo.toml
test_programs/formal_verify_success/field_wrapped_overflow_4/: Nargo.toml
test_programs/formal_verify_success/field_wrapped_overflow_5/: Nargo.toml
test_programs/formal_verify_success/for_loop_blocks/: Nargo.toml
test_programs/formal_verify_success/forall_structure/: Nargo.toml
test_programs/formal_verify_success/forall_sum_of_evens/: Nargo.toml
test_programs/formal_verify_success/func_call_in_annotation/: Nargo.toml
test_programs/formal_verify_success/func_call_in_if_4/: Nargo.toml
test_programs/formal_verify_success/fv_std_old/: Nargo.toml
test_programs/formal_verify_success/generics_basic/: Nargo.toml
test_programs/formal_verify_success/ghost_function_in_attribute/: Nargo.toml
test_programs/formal_verify_success/global_const_in_module/: Nargo.toml
test_programs/formal_verify_success/global_const_in_nested_module/: Nargo.toml
test_programs/formal_verify_success/if_overflow_1/: Nargo.toml
test_programs/formal_verify_success/if_overflow_2/: Nargo.toml
test_programs/formal_verify_success/if_overflow_complex/: Nargo.toml
test_programs/formal_verify_success/implication_operator_2/: Nargo.toml
test_programs/formal_verify_success/index_composite_array_with_const/: Nargo.toml
test_programs/formal_verify_success/index_composite_array_with_var_1/: Nargo.toml
test_programs/formal_verify_success/index_composite_array_with_var_2/: Nargo.toml
verno/: Cargo.toml  build.rs
verno/src/: main.rs
verno/src/cli/: cli_components.rs  fv_cmd.rs  mod.rs  proxy_cmd.rs
verno/tests/: execute.rs
(+197 files in other folders)
