[package]
name = "formal_verification"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
# ACVM & FV-related crates
acvm.workspace = true
bn254_blackbox_solver.workspace = true
nom.workspace = true
derive_more.workspace = true
vir.workspace = true

# Noir compiler dependencies
noirc_driver.workspace = true
noirc_errors.workspace = true
noirc_evaluator.workspace = true
noirc_frontend.workspace = true
nargo_cli.workspace = true
fm.workspace = true

# Utility crates
iter-extended.workspace = true

# Serde & JSON
serde.workspace = true
serde_json.workspace = true

# Math
num-bigint.workspace = true
num-traits.workspace = true

# Error handling
thiserror.workspace = true
