[package]
name = "formal_verification"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bn254_blackbox_solver.workspace = true
serde_json.workspace = true
serde.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
noirc_errors.workspace = true
noirc_evaluator.workspace = true
noirc_frontend.workspace = true
vir.workspace = true
cfg-if.workspace = true
tracing.workspace = true
strum.workspace = true
strum_macros.workspace = true
nom = "8.0"

[dev-dependencies]
base64.workspace = true
function_name = "0.3.0"
proptest.workspace = true
proptest-derive.workspace = true
insta.workspace = true

[features]
bn254 = []
bls12_381 = []
test_utils = []
nextest = []
