[package]
name = "fv_bridge"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true


[dependencies]
vir.workspace = true
serde.workspace = true
noirc_errors.workspace = true
noirc_frontend.workspace = true
noirc_evaluator.workspace = true
noirc_driver.workspace = true
fm.workspace = true
iter-extended.workspace = true
formal_verification.workspace = true
acvm.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
thiserror.workspace = true

[dev-dependencies]
iter-extended.workspace = true
